update packages (new laravel activity log by spatie)
